:fire: cambios de pagina

--- a/contenido/pag09.html
+++ b/contenido/pag09.html
@@ -1,104 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página 09</title>
 </head>
-
 <body>
-    <div id="instrucciones-pag20">
-        <figure class="img-clic">
-            <img src="./build/img/contenido/Pag09/icon2click.svg" alt="Mano">
+    <div id="cont-pag09">
+        <figure id="persona" class="cont-imagen">
+            <img src="./build/img/contenido/Pag10/persona.svg" alt="persona">
         </figure>
-        <p>
-            Da clic en cada tarjeta para conocer más sobre cuál es la misión del Manual de Cumplimiento PLD/CFT.
-        </p>
-    </div>
+        <div class="hojas09" id="hoja09_1">
+            <div class="puntos09">
+                <p>
+                    Al menos una vez al año las entidades deben identificar que los expedientes clasificados como ALTO RIESGO estén completos.
+                </p>
+                <figure class="contimagen">
+                    <img src="./build/img/contenido/Pag10/paloma.svg" alt="paloma">
+                </figure>
+            </div>
+            <div class="puntos09">
+                <p>
+                    Si durante la relación comercial se detectan cambios significativos en el comportamiento transaccional, sin que exista causa justificada o surgen dudas sobre la veracidad o exactitud de los datos o documentos, se reclasifica al cliente como de grado de riesgo superior. Al analizarlo se deberá verificar y solicitar la actualización de sus datos y documentos.
+                </p>
+                <figure class="contimagen">
+                    <img src="./build/img/contenido/Pag10/paloma.svg" alt="paloma">
+                </figure>
+            </div>
+            <div class="puntos09">
+                <p>
+                    Las entidades cuentan con un sistema automatizado que permite conservar, actualizar y consultar los datos relativos al expediente de cada cliente. Es indispensable siempre tenerlo actualizado para agilizar cualquier consulta o aclaración. 
 
+                </p>
+                <figure class="contimagen">
+                    <img src="./build/img/contenido/Pag10/paloma.svg" alt="paloma">
+                </figure>
+            </div>
+        </div>
+        <div class="hojas09" id="hoja09_2">
+            <h4>
+                Para que el expediente se considere completo debe contener:
+            </h4>
 
-    <div id="flipCards-pag09">
-        <div class="cards" id="flip1">
-            <div class="front caras">
+            <div class="puntos09">
+                <div class="cont-ul">
+                    <h5>Datos:</h5>
+                    <ul>
+                        <li>Que se incluyan los obligatorios.</li>
+                        <li>Que no tenga abreviaturas.</li>
+                        <li>Los datos declarados deberán coincidir con los documentos proporcionados.</li>
+                    </ul>
+                </div>
+
                 <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag09/libro-azul.svg" alt="Flip Card">
+                    <img src="./build/img/contenido/Pag10/paloma.svg" alt="paloma">
                 </figure>
             </div>
-            <div class="back caras">
-                <div class="cont-mensaje-back" id="libro-azul">
-                    <p>Cumplir con lo dispuesto por la LISF, las Disposiciones y demás normativas aplicables a la
-                        materia.</p>
+
+            <div class="puntos09">
+                <div class="cont-ul">
+                    <h5>Documentos:</h5>
+                    <ul>
+                        <li>No olvides corroborar que sean oficiales 
+                            y vigentes.</li>
+                        <li>Verifica que sean legibles.</li>
+                        <li>Copia del mismo documento: cotejo original y copia.</li>
+                        <li>Recibe solamente copias en buen estado.</li>
+                        <li>Sin tachaduras o enmendaduras.</li>
+                    </ul>
                 </div>
-            </div>
-        </div>
-        <div class="cards" id="flip2">
-            <div class="front caras">
+
                 <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag09/libro-naranja.svg" alt="Flip Card">
+                    <img src="./build/img/contenido/Pag10/paloma.svg" alt="paloma">
                 </figure>
-            </div>
-            <div class="back caras">
-                <div class="cont-mensaje-back" id="libro-naranja">
-                    <p>Establecer las medidas y procedimientos mínimos a observar para prevenir y detectar los actos,
-                        omisiones y operaciones que pudieran favorecer, prestar ayuda, auxilio o cooperación de
-                        cualquier especie para la comisión de los delitos previstos en los artículos 139, 139 Quáter,
-                        148 Bis o 400 Bis del Código Penal Federal.</p>
-                </div>
-            </div>
-        </div>
-        <div class="cards" id="flip3">
-            <div class="front caras">
-                <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag09/libro-amarillo.svg" alt="Flip Card">
-                </figure>
-            </div>
-            <div class="back caras">
-                <div class="cont-mensaje-back" id="libro-amarillo">
-                    <p>
-                        Prevenir que las Operaciones de la Compañía sean utilizadas para ocultar el origen de los
-                        recursos de procedencia ilícita y/o para financiar actos terroristas, y por lo tanto, se dañe la
-                        reputación de la Compañía.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="cards" id="flip4">
-            <div class="front caras">
-                <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag09/libro-verde.svg" alt="Flip Card">
-                </figure>
-            </div>
-            <div class="back caras">
-                <div class="cont-mensaje-back" id="libro-verde">
-                    <p>
-                        Establecer criterios uniformes conforme a los procesos operativos y estrategias, que permitan a
-                        los colaboradores de la Compañía establecer sistemas preventivos de identificación y de
-                        conocimiento del Cliente; a fin de mitigar el riesgo de realizar operaciones que pudieran verse
-                        implicadas en los supuestos antes referidos.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="cards" id="flip5">
-            <div class="front caras">
-                <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag09/libro-azur.svg" alt="Flip Card">
-                </figure>
-            </div>
-            <div class="back caras">
-                <div class="cont-mensaje-back" id="libro-azur">
-                    <p>
-                        Ser una herramienta de trabajo mediante la cual los Colaboradores de la Compañía podrán detectar
-                        y reportar posibles Operaciones con recursos de procedencia ilícita y/o combate al
-                        financiamiento al terrorismo; así como realizar el reporte de cualquier operación a la
-                        autoridad.
-                    </p>
-                </div>
             </div>
         </div>
     </div>
 </body>
-
 </html>
