--- a/contenido/pag15.html
+++ b/contenido/pag15.html
@@ -1,274 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página 15</title>
 </head>
+
 <body>
-    <div id="cont-info14">
-        <div id="cont-caracteristicas">
-            <div class="cont-globo">
-                <div class="globo">
-                    <p>
-                        Las Aseguradoras y la Reaseguradora están obligadas a contar con un sistema automatizado, el cual debe: 
-                    </p>
-                    <ul>
-                        <li>Tener un estricto control en las operaciones e información de los Clientes.</li>
-                        <li>Ser un instrumento útil para la detección y clasificación de las Operaciones relevantes, inusuales e internas  preocupantes.</li>
-                        <li>Servir como enlace para los reportes ante 
-                            la CNSF.</li>
-                        <li>Simplificar procesos internos para gestionar 
-                            el cumplimiento a las Disposiciones.</li>
-                        <li>Identificar a las personas en las Listas Oficiales que emiten las autoridades competentes.</li>
-                        <li>Ejecutar la Metodología de Evaluación 
-                            de Riesgos.</li>
-                    </ul>
-                </div>
-            </div>
-            <figure class="cont-imagen" id="imgPersona">
-                <img src="./build/img/contenido/Pag15/persona.svg" alt="persona">
+    <!-- <div id="instrucciones">
+        <figure class="mano">
+            <img src="./build/img/contenido/Pag16/mano.svg" alt="Mano">
+        </figure>
+        <p>Da clic en cada colega para conocer más detalles sobre tus deberes de confidencialidad.</p>
+    </div> -->
+    <div id="cont-verde">
+        <a class="btn_cuadros12" href="#globo1">
+            <figure class="personaje1">
+                <img src="./build/img/contenido/Pag16/personaje1.svg" alt="Personaje">
             </figure>
-            <div id="cont-mano">
-                <div class="instrucciones-mano">
-                    <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag15/Mano.svg" alt="mano">
-                    </figure>
-                    <p>Da clic en cada botón para conocer más funciones de los sistemas automatizados.</p>
-                </div>
+        </a>
+        <div class ="globos12" id="globo1">
+            1. Deberás mantener confidencialidad respecto de la información de envío de reportes o requerimientos de
+            información y documentación, a la CNSF y demás autoridades facultadas.
+        </div>
+    </div>
+    <div id="columnas">
+        <div id="cont-azul">
+            <a class="btn_cuadros12" href="#globo2">
+                <figure class="personaje2">
+                    <img src="./build/img/contenido/Pag16/personaje3.svg" alt="Personaje">
+                </figure>
+            </a>
+            <div class ="globos12" id="globo2">
+                2. Recuerda no comentar o proporcionar por cualquier medio, datos
+                y documentos que integran los expedientes de identificación de los Clientes, así como los registros de
+                operaciones.
             </div>
         </div>
-
-       <div id="contenido-info">
-            <!-- <div class="cont-computadoras"> -->
-                <figure id="pc-1" class="cont-imagen">
-                    <a href="#info1" class="btn-pc">
-                        <img src="./build/img/contenido/Pag15/pc-verde.svg" alt="pc">
-                    </a>
-                </figure>
-                <figure id="pc-2" class="cont-imagen">
-                    <a href="#info2" class="btn-pc">
-                        <img src="./build/img/contenido/Pag15/pc-naranja.svg" alt="pc">
-                    </a>
-                </figure>
-                <figure id="pc-3" class="cont-imagen">
-                    <a href="#info3" class="btn-pc">
-                        <img src="./build/img/contenido/Pag15/pc-azul.svg" alt="pc">
-                    </a>
-                </figure>
-                <figure id="pc-4" class="cont-imagen">
-                    <a href="#info4" class="btn-pc">
-                        <img src="./build/img/contenido/Pag15/pc-amarilla.svg" alt="pc">
-                    </a>
-                </figure>
-                <figure id="pc-5" class="cont-imagen">
-                    <a href="#info5" class="btn-pc">
-                        <img src="./build/img/contenido/Pag15/pc-gris.svg" alt="pc">
-                    </a>
-                </figure>
-                <figure id="pc-6" class="cont-imagen">
-                    <a href="#info6" class="btn-pc">
-                        <img src="./build/img/contenido/Pag15/pc-azulRey.svg" alt="pc">
-                    </a>
-                </figure>
-                <figure id="pc-7" class="cont-imagen">
-                    <a href="#info7" class="btn-pc">
-                        <img src="./build/img/contenido/Pag15/pc-amarilla.svg" alt="pc">
-                    </a>
-                </figure>
-                <figure id="pc-8" class="cont-imagen">
-                    <a href="#info8" class="btn-pc">
-                        <img src="./build/img/contenido/Pag15/pc-azul.svg" alt="pc">
-                    </a>
-                </figure>
-                <figure id="pc-9" class="cont-imagen">
-                    <a href="#info9" class="btn-pc">
-                        <img src="./build/img/contenido/Pag15/pc-naranja.svg" alt="pc">
-                    </a>
-                </figure>
-                <figure id="pc-10" class="cont-imagen">
-                    <a href="#info10" class="btn-pc">
-                        <img src="./build/img/contenido/Pag15/pc-verde.svg" alt="pc">
-                    </a>
-                </figure>
-                <div id="info-computadoras">
-                    <div class="cuadros-info cuadro-activo" id="info1">
-                        <p>
-                            Conservar y actualizar los datos relativos a la información del respectivo expediente de identificación de cada cliente. 
-                        </p>
-                    </div>
-                    <div class="cuadros-info" id="info2">
-                        <p>
-                            Generar y transmitir de forma segura a la SHCP, la información relativa a los reportes de operaciones relevantes, inusuales e internas preocupantes.
-                        </p>
-                    </div>
-                    <div class="cuadros-info" id="info3">
-                        <p>
-                            Clasificar los tipos de operaciones o productos financieros que ofrezca las Compañía a sus clientes, con base en los criterios establecidos para detectar posibles operaciones inusuales.
-                        </p>
-                    </div>
-                    <div class="cuadros-info" id="info4">
-                        <p>
-                            Ejecutar el sistema de alertas y contribuir a la detección, seguimiento y análisis de operaciones inusuales e internas preocupantes; considerando la información que haya sido proporcionada por el cliente al inicio de la relación comercial, su histórico, transacciones, saldos promedio y cualquier otro parámetro para detectar este tipo de operaciones. 
-                        </p>
-                    </div>
-                    <div class="cuadros-info" id="info5">
-                        <p>
-                            Agrupar en una base consolidada, las operaciones y contratos de un mismo cliente, a efecto de controlar y dar seguimiento de sus operaciones.
-                        </p>
-                    </div>
-                    <div class="cuadros-info" id="info6">
-                        <p>
-                            Conservar registros históricos de las posibles operaciones inusuales e internas preocupantes.
-                        </p>
-                    </div>
-                    <div class="cuadros-info" id="info7">
-                        <p>
-                            Servir de medio para que la Compañía reporte a las áreas internas de forma segura, confidencial y auditable las posibles operaciones inusuales e internas preocupantes. 
-                        </p>
-                    </div>
-                    <div class="cuadros-info" id="info8">
-                        <p>
-                            Mantener esquemas de seguridad en la información que garanticen la integridad, disponibilidad, auditabilidad y confidencialidad de la misma.
-                        </p>
-                    </div>
-                    <div class="cuadros-info" id="info9">
-                        <p>
-                            Proveer la información que las Compañías incluirán en la Metodología de Evaluación de Riesgos.
-                        </p>
-                    </div>
-                    <div class="cuadros-info" id="info10">
-                        <p>
-                            Ejecutar un sistema de alertas que detecte operaciones que involucren países o jurisdicciones con regímenes fiscales preferentes o que no cuenten con medidas de PLD/CFT, PEP's y Lista de Personas Bloqueadas.
-                        </p>
-                    </div>
+        <div id="cont-gris">
+            <div id="cont-img">
+                <div class ="globos12" id="globo3">
+                    3. Puedes reportar las operaciones inusuales realizadas por colaboradores, Cedentes, proveedores,
+                    contratistas o cualquier otro con vínculos con la aseguradora o reaseguradora
+                    a los siguientes correos:
                 </div>
-            <!-- </div> -->
-       </div>
-
-       <div id="cont-info-movil">
-           <div class="cont-botones-info" id="cont-info1">
-               <a href="#info-m1" class="btn-info-movil">
-                    <figure class="cont-imagen" id="engrane1">
-                        <img src="./build/img/contenido/Pag15/engrane.svg" alt="engrane">
+                <div id="correo">
+                    <p>oficialdecumplimiento@patriare.com.mx</p>
+                    <p>oficialdecumplimiento@gseguros.com.mx</p>
+                    <p>oficialdecumplimiento@gsalud.com.mx</p>
+                </div>
+                <a class="btn_cuadros12" href="#globo3">
+                    <figure class="personaje3">
+                        <img src="./build/img/contenido/Pag16/personaje2.svg" alt="Personaje">
                     </figure>
                 </a>
-                <div class="cuadros-info-movil" id="info-m1">
-                    <p>
-                        Conservar y actualizar los datos relativos a la información del respectivo expediente de identificación de cada cliente.
-                    </p>
-                </div>
-           </div>
-           <div class="cont-botones-info" id="cont-info2">
-               <a href="#info-m2" class="btn-info-movil">
-                    <figure class="cont-imagen" id="engrane2">
-                        <img src="./build/img/contenido/Pag15/engrane.svg" alt="engrane">
-                    </figure>
-                </a>
-                <div class="cuadros-info-movil" id="info-m2">
-                    <p>
-                        Generar, y transmitir de forma segura a la SHCP, la información relativa a los reportes de operaciones relevantes, inusuales e internas preocupantes.
-                    </p>
-                </div>
-           </div>
-           <div class="cont-botones-info" id="cont-info3">
-               <a href="#info-m3" class="btn-info-movil">
-                    <figure class="cont-imagen" id="engrane3">
-                        <img src="./build/img/contenido/Pag15/engrane.svg" alt="engrane">
-                    </figure>
-                </a>
-                <div class="cuadros-info-movil" id="info-m3">
-                    <p>
-                        Clasificar los tipos de operaciones o productos financieros que ofrezca las Compañía a sus clientes, con base en los criterios establecidos para detectar posibles operaciones inusuales.
-                    </p>
-                </div>
-           </div>
-           <div class="cont-botones-info" id="cont-info4">
-               <a href="#info-m4" class="btn-info-movil">
-                    <figure class="cont-imagen" id="engrane4">
-                        <img src="./build/img/contenido/Pag15/engrane.svg" alt="engrane">
-                    </figure>
-                </a>
-                <div class="cuadros-info-movil" id="info-m4">
-                    <p>
-                        Ejecutar el sistema de alertas y contribuir a la detección, seguimiento y análisis de operaciones inusuales e internas preocupantes; considerando la información que haya sido proporcionada por el cliente al inicio de la relación comercial, su histórico, transacciones, saldos promedio y cualquier otro parámetro para detectar este tipo de operaciones.
-                    </p>
-                </div>
-           </div>
-           <div class="cont-botones-info" id="cont-info5">
-               <a href="#info-m5" class="btn-info-movil">
-                    <figure class="cont-imagen" id="engrane5">
-                        <img src="./build/img/contenido/Pag15/engrane.svg" alt="engrane">
-                    </figure>
-                </a>
-                <div class="cuadros-info-movil" id="info-m5">
-                    <p>
-                        Agrupar en una base consolidada, las operaciones y contratos de un mismo cliente, a efecto de controlar y dar seguimiento de sus operaciones.
-                    </p>
-                </div>
-           </div>
-           <div class="cont-botones-info" id="cont-info6">
-               <a href="#info-m6" class="btn-info-movil">
-                    <figure class="cont-imagen" id="engrane6">
-                        <img src="./build/img/contenido/Pag15/engrane.svg" alt="engrane">
-                    </figure>
-                </a>
-                <div class="cuadros-info-movil" id="info-m6">
-                    <p>
-                        Conservar registros históricos de las posibles operaciones inusuales e internas preocupantes.
-                    </p>
-                </div>
-           </div>
-           <div class="cont-botones-info" id="cont-info7">
-               <a href="#info-m7" class="btn-info-movil">
-                    <figure class="cont-imagen" id="engrane7">
-                        <img src="./build/img/contenido/Pag15/engrane.svg" alt="engrane">
-                    </figure>
-                </a>
-                <div class="cuadros-info-movil" id="info-m7">
-                    <p>
-                        Servir de medio para que las Compañía reporte a las áreas internas de forma segura, confidencial y auditable las posibles operaciones inusuales e internas preocupantes.
-                    </p>
-                </div>
-           </div>
-           <div class="cont-botones-info" id="cont-info8">
-               <a href="#info-m8" class="btn-info-movil">
-                    <figure class="cont-imagen" id="engrane8">
-                        <img src="./build/img/contenido/Pag15/engrane.svg" alt="engrane">
-                    </figure>
-                </a>
-                <div class="cuadros-info-movil" id="info-m8">
-                    <p>
-                        Mantener esquemas de seguridad en la información que garanticen la integridad, disponibilidad, auditabilidad y confidencialidad de la misma.
-                    </p>
-                </div>
-           </div>
-           <div class="cont-botones-info" id="cont-info9">
-               <a href="#info-m9" class="btn-info-movil">
-                    <figure class="cont-imagen" id="engrane9">
-                        <img src="./build/img/contenido/Pag15/engrane.svg" alt="engrane">
-                    </figure>
-                </a>
-                <div class="cuadros-info-movil" id="info-m9">
-                    <p>
-                        Proveer la información que las Compañías incluirán en la Metodología de Evaluación de Riesgos.
-                    </p>
-                </div>
-           </div>
-           <div class="cont-botones-info" id="cont-info10">
-               <a href="#info-m10" class="btn-info-movil">
-                    <figure class="cont-imagen" id="engrane10">
-                        <img src="./build/img/contenido/Pag15/engrane.svg" alt="engrane">
-                    </figure>
-                </a>
-            <div class="cuadros-info-movil" id="info-m10">
-                <p>
-                    Ejecutar un sistema de alertas que detecte operaciones que involucren países o jurisdicciones con regímenes fiscales preferentes o que no cuenten con medidas del PLD/CFT, PEP's y Lista de Personas Bloqueadas.
-                </p>
             </div>
-       </div>
-       </div>
+            <div id="cont-rojo">
+                <figure class="warning">
+                    <img src="./build/img/contenido/Pag16/warning.svg" alt="Warning">
+                </figure>
+                <p>El incumplimiento de lo señalado en los numerales 1 y 2 puede derivar en la aplicación
+                    de medidas disciplinarias.</p>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
