--- a/contenido/pag17.html
+++ b/contenido/pag17.html
@@ -6,130 +6,141 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página 17</title>
+
 </head>
 
 <body>
-    <div id="cont-pag16">
-        <div id="cont-izquierda">
-            <div id="cont-img">
-                <figure class="personaje">
-                    <img src="./build/img/contenido/Pag17/personaje.svg" alt="Personaje">
-                </figure>
-                <div id="globo1">
-                    <p>
-                        No olvides que las LISTAS DE PERSONAS BLOQUEADAS son emitidas por organismos y autoridades
-                        nacionales e internacionales que incluyen personas físicas y morales que participan o se
-                        relacionan con el Lavado de Dinero y Financiamiento al Terrorismo.
-                    </p>
-                </div>
-            </div>
-            <div id="cont-gris">
-                <div id="globo2">
-                    <p>
-                        La Compañía cuando identifique que al celebrar una operación, el nombre de su cliente se
-                        encuentra dentro de las LISTAS DE PERSONAS BLOQUEADAS, o que terceros las efectúan, remitirá un
-                        reporte de Operación Inusual a la SHCP por conducto de la CNSF dentro de las 24 horas contadas
-                        a partir de que se conozca dicha información; asimismo, no iniciará relación comercial con el
-                        Cliente.
-                    </p>
-                </div>
-            </div>
+    <div id="cont1-pag17">
+        <figure class="img-personaje1">
+            <img src="./build/img/contenido/Pag18/persona1.svg" alt="persona 1">
+        </figure>
+        <div id="text-personaje1">La Metodología de Evaluación de Riesgos, nos permite entender cómo y hasta qué punto
+            somos
+            vulnerables a
+            los riesgos en materia de LD/FT, lo que nos permite asignar adecuadamente nuestros recursos y aplicar
+            procesos de gestión de riesgos efectivos a las características de esos riesgos.
         </div>
-        <div id="cont-derecha">
-            <div id="cont-vino">
-                <p>La Compañía no inicia relaciones comerciales con las personas que posean las siguientes
-                    características.
-                </p>
-            </div>
-            <div id="clic-pag16">
-                <figure class="mano-pag16">
-                    <img src="./build/img/contenido/Pag17/mano.svg" alt="Mano">
+    </div>
+
+    <div id="cont2-pag17">
+        <div id="cont-graficaPastel">
+            <figure class="img-grafica">
+                <img src="./build/img/contenido/Pag18/grafica-pastel-nueva.svg" alt="Grafica Pastel">
+            </figure>
+        </div>
+        <div id="cont-buzon">
+            <div id="buzon">
+                <figure class="img-buzon">
+                    <img src="./build/img/contenido/Pag18/buzon.svg" alt="Buzon">
                 </figure>
-                <p>Da clic en cada botón para conocerlas:</p>
+                <span id="text-buzon">Buzón de Denuncia y correo del Oficial de Cumplimiento</span>
             </div>
-            <div id="botones">
-                <h3>Supuestos no Aplicables</h3>
-                <div class="flex">
-                    <div id="btn-aseguradora">
-                        <a class="btn-pag16" href="#aseguradora">Aseguradora</a>
-                    </div>
-                    <div id="btn-reaseguradora">
-                        <a class="btn-pag16" href="#reaseguradora">Reaseguradora Patria</a>
-                    </div>
-                </div>
+            <div id="personaje">
+                <span id="text-personaje2">Recuerda que la Compañía cuenta
+                    con un <b>Buzón de Denuncia</b> para operaciones internas preocupantes
+                    o inusuales que te permite enviar directamente, al área a cargo del Oficial de Cumplimiento, avisos
+                    sobre operaciones o conductas que detectes de cualquiera, de otros Colaboradores, Clientes o
+                    Agentes, identificadas como Operaciones Inusuales u Operaciones Internas Preocupantes.
+                </span>
+                <figure class="img-personaje2">
+                    <img src="./build/img/contenido/Pag18/persona2.svg" alt="Personaje 2">
+                </figure>
             </div>
         </div>
     </div>
-    <div id="cards-pag16">
-        <div class="mapa-pag16" id="aseguradora">
-            <div class="titulo">
-                Aseguradora
-            </div>
-            <p>No se encuentra sujeta a las obligaciones, procedimientos y requisitos relativos a la Geolocalización,
-                hasta que se emitan las disposiciones de carácter general correspondientes por la CNSF.
-            </p><br>
-            <p>No celebra ni celebrará ningún tipo de operación (incluyendo operaciones anónimas o bajo nombres
-                ficticios), hasta que se hayan cumplido satisfactoriamente con los requisitos de identificación.
-            </p><br>
-            <p>
-                No tiene celebrados contratos con terceros para la celebración de entrevistas con el cliente.
-            </p><br>
-            <p>
-                No cuenta con oficinas, sucursales, agencias o filiales en el extranjero.
-            </p><br>
-            <p>
-                No forma parte de ningún grupo financiero en términos de la Ley para regular las Agrupaciones
-                Financieras.
-            </p><br>
-            <p>
-                No actúa como Reaseguradora o Reafianzadora de instituciones extranjeras.
-            </p><br>
-            <p>
-                No celebra contratos de venta de seguros a través de banca electrónica; ni operaciones de Fidecomisos.
-            </p><br>
-            <p>
-                La Compañía no realiza operaciones en efectivo moneda nacional y/o extranjera en cajas por cualquier
-                monto, recibiendo únicamente depósitos a través de cuentas concentradoras.
-            </p><br>
-            <p>
-                Para General de Salud, por las características de la operación, no cuenta con la figura de Comprador
-                de Salvamentos.
-            </p><br>
-        </div>
-        <div class="mapa-pag16" id="reaseguradora">
-            <div class="titulo">
-                Reaseguradora Patria
-            </div>
-            <p>
-                Persona física de nacionalidad mexicana o extranjera en condiciones de estancia de residente temporal
-                o permanente, en términos de la Ley de Migración.
-            </p><br>
-            <p>
-                Persona física de nacionalidad extranjera que no está en el territorio nacional, en condiciones de
-                estancia
-                de residente temporal o permanente en términos de la Ley de Migración.
-            </p><br>
-            <p>
-                Apoderados de las Cedentes personas morales, cuando actúen a través de ellos.
-            </p><br>
-            <p>
-                Proveedores de recursos, cuando la Compañía identifique que los recursos no son de la Cedente.
-            </p><br>
-            <p>
-                No establece relaciones con fideicomitentes, fideicomisarios, mandantes, comitentes o participantes
-                cuya identidad era indeterminada al momento de suscribirse los fideicomisos, mandatos, comisiones
-                o cualquier instrumento similar.
-            </p><br>
-            <p>
-                No realiza operaciones en efectivo moneda nacional y/o extranjera por cualquier monto, recibiendo
-                únicamente operaciones por transferencia electrónica por parte de sus Cedentes, por lo anterior,
-                no desarrolla mecanismos para dar seguimiento y, en su caso, agrupar las transacciones.
-            </p><br>
-            <p>
-                Por las características de la operación, no cuenta con la figura de Comprador de Salvamentos.
-            </p><br>
+
+    <div id="cont3-pag17">
+        <figure class="img-personaje3">
+            <img src="./build/img/contenido/Pag18/persona-computadora.svg" alt="Personaje 3">
+        </figure>
+        <div id="text-personaje3">
+            En la intranet de las Aseguradoras y de la Reaseguradora, se cuenta con el Buzón de Denuncia para
+            operaciones internas preocupantes o inusuales para que todos los colaboradores envíen de manera directa al
+            Oficial de Cumplimiento avisos sobre operaciones o conductas detectadas.
         </div>
     </div>
+
+    <div id="instrucciones-pag17">
+        <figure class="img-clic">
+            <img src="./build/img/contenido/Pag18/i-click.svg" alt="Clic">
+        </figure>
+        <p>Para conocer qué situaciones o conductas son tu deber reportar al General de Seguros/ General de Salud o
+            Patria, deslízate con las flechas de izquierda y derecha.
+        </p>
+    </div>
+
+    <div id="cont-carrusel">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="slide">
+                        <div class="txt-slide">
+                            El cliente se niega a proporcionar datos o documentos de identificación del Cliente, que son
+                            necesarios para la contratación, sin embargo, en cliente presenta información que pudiera
+                            ser apócrifa o falsa.
+                        </div>
+                        <figure class="img-slide">
+                            <img src="./build/img/contenido/Pag18/slide1.svg" alt="slide 1">
+                        </figure>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="slide">
+                        <div class="txt-slide">
+                            Cuando los clientes intenten sobornar, persuadir o intimidar a los Colaboradores con el
+                            propósito de realizar actividades u operaciones inusuales en contra de la Ley o de las
+                            Políticas Internas.
+                        </div>
+                        <figure class="img-slide">
+                            <img src="./build/img/contenido/Pag18/slide2.svg" alt="slide 2">
+                        </figure>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="slide">
+                        <div class="txt-slide">
+                            Conoces o tienes sospechas de que el Cliente está involucrado en actos ilícitos. 
+                        </div>
+                        <figure class="img-slide">
+                            <img src="./build/img/contenido/Pag18/slide3.svg" alt="slide 3">
+                        </figure>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="slide">
+                        <div class="txt-slide">
+                            Se detectan flujos de efectivo inusualmente elevados y no habituales para el cliente. 
+                        </div>
+                        <figure class="img-slide">
+                            <img src="./build/img/contenido/Pag18/slide4.svg" alt="slide 4">
+                        </figure>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="slide">
+                        <div class="txt-slide">
+                            La apariencia del cliente o su domicilio no concuerdan con la información.
+                        </div>
+                        <figure class="img-maletin">
+                            <img src="./build/img/contenido/Pag18/slide5.svg" alt="slide 5">
+                        </figure>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
