--- a/contenido/pag21.html
+++ b/contenido/pag21.html
@@ -1,302 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página 21</title>
 </head>
-
 <body>
-    <div class="intro-pagina21">
-        <figure class="cont-imagen">
-            <img src="./build/img/contenido/Pag21/persona1.svg" alt="persona">
+    <div class="versus">
+        <div class="seguro">
+            <h1>Seguro</h1>
+        </div>
+        <div class="vs">
+            <h1>VS</h1>
+        </div>
+        <div class="reaseguro">
+            <h1>Reaseguro</h1>
+        </div>
+    </div>
+
+    <div class="tablaComparacion">
+        <div class="tituloSeguro">
+            <h2>Seguro</h2>
+        </div>
+        <div class="tituloReaseguro">
+            <h2>Reaseguro</h2>
+        </div>
+        <div class="seguro elementos">
+            <p>1. Pólizas</p>
+        </div>
+        <div class="reaseguro elementos">
+            <p>1. Contratos de reaseguro.</p>
+        </div>
+        <div class="seguro elementos">
+            <p>2. Se Comercializan productos.</p>
+        </div>
+        <div class="reaseguro elementos">
+            <p>2. Se suscriben carteras de Clientes, a través de contratos de reaseguro.</p>
+        </div>
+        <div class="seguro elementos">
+            <p>3. Servicios financieros.</p>
+        </div>
+        <div class="reaseguro elementos">
+            <p>3. Instrumentos de dispersión de riesgos.</p>
+        </div>
+        <div class="seguro elementos">
+            <p>4. CODUSEF.</p>
+        </div>
+        <div class="reaseguro elementos">
+            <p>4. No Aplica.</p>
+        </div>
+        <div class="seguro elementos">
+            <p>5. GAFI | Producto de Alto Riesgo: componente de Ahorro e Inversión, el resto de productos son de Bajo Riesgo.</p>
+        </div>
+        <div class="reaseguro elementos">
+            <p>5. GAFI | Riesgo: bajo.</p>
+        </div>
+        <div class="seguro elementos">
+            <p>6. Clientes:</p>
+            <ul>
+                <li>Personas físicas</li>
+                <li>Personas morales</li>
+                <li>Entidades financieras</li>
+                <li>Entidades gubernamentales</li>
+                <li>Fideicomisos</li>
+            </ul>
+        </div>
+        <div class="reaseguro elementos">
+            <p>6. Únicamente cendentes, es decir, instituciones financieras
+                que sean aseguradoras y reafianzadoras.</p>
+        </div>
+        <div class="seguro elementos">
+            <p>7. Primas emitidas.</p>
+        </div>
+        <div class="reaseguro elementos">
+            <p>7. Primas tomadas en reaseguro.</p>
+        </div>
+        <div class="seguro elementos">
+            <p>8. Régimen de PLD/CFT con pilares de prevención estándar al 
+                resto de entidades financieras:</p>
+            <ol type="a">
+                <li>Identificación del Cliente</li>
+                <li>Conocimiento del Cliente</li>
+                <li>Enfoque basado en riesgo</li>
+                <li>Estructuras internas</li>
+                <li>Capacitación</li>
+                <li>Reportes regulatorios</li>
+                <li>Sistemas automatizados</li>
+                <li>Lista de personas bloqueadas</li>
+                <li>Auditoría interna</li>
+            </ol>
+        </div>
+        <div class="reaseguro elementos">
+            <p>8. Régimen de PLD/CFT con diversas particularidades:</p>
+            <ol type="a">
+                <li>
+                    Identificación de la Cedente
+                    <ol type="i">
+                        <li>Únicamente aplica el Régimen Simplificado de 
+                            Identificación.</li>
+                    </ol>
+                </li>
+                <li>
+                    Conocimiento de la Cedente
+                    <ol type="i">
+                        <li>El origen de los recursos del Cliente ya fueron
+                            identificados por la Cedente.</li>
+                    </ol>
+                </li>
+            </ol>
+        </div>
+
+        <figure>
+            <img src="./build/img/contenido/Pag26/mujer26.svg" alt="mano">
         </figure>
-        <div class="cont-mensaje">
-            <p>Finalizaste la segunda parte de tu curso PLD/CFT. ¡Es momento de una actividad para saber que tanto has
-                aprendido de los dos primeros temas que has revisado! Lee con cuidado los enunciados de la primera
-                columna y únelos con el concepto que le corresponde en la segunda columna. Si estás listo, da clic en el
-                botón.</p>
-        </div>
-    </div>
-
-    <div class="cont-btnInicio">
-        <a href="#cont-actividadRelacion">Inicio</a>
-    </div>
-
-    <div id="cont-actividadRelacion">
-        <div class="instrucciones-mano instrucciones1">
-            <div class="cont-imagen">
-                <img src="./build/img/contenido/Pag21/Mano.svg" alt="">
-            </div>
-            <p>Lee con cuidado los enunciados de la primera columna y únelos con el concepto que le corresponde en la
-                segunda columna.</p>
-        </div>
-
-        <div class="instrucciones-mano instrucciones2">
-            <div class="cont-imagen">
-                <img src="./build/img/contenido/Pag21/Mano.svg" alt="">
-            </div>
-            <p>Lee el enunciado y selecciona el concepto que le corresponde. </p>
-        </div>
-
-        <div class="actividad">
-            <div class="cont-enunciados">
-                <div class="filas">
-                    <div class="enunciados" id="enunciado1" data-enunciado="1">
-                        <p>Nos permite entender cómo y hasta qué punto somos vulnerables a los riesgos en materia de
-                            LD/FT, lo que nos posibilita asignar adecuadamente nuestros recursos y aplicar procesos de
-                            gestión de riesgos.</p>
-                    </div>
-                    <div id="bloquearEnunciado1" class="bloquear"></div>
-
-                    <div class="cont-conceptos">
-                        <div class="filas">
-                            <div class="conceptos1" id="concepto1" data-definicion="3">
-                                <p>Oficial de Cumplimiento
-</p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos1" id="concepto1" data-definicion="5">
-                                <p>Operaciones inusuales e internas preocupantes
-                                </p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos1" id="concepto1" data-definicion="1">
-                                <p>Metodología de Evaluación de Riesgos</p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos1" id="concepto1" data-definicion="2">
-                                <p>Buzón de Denuncia para operaciones internas preocupantes e inusuales</p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos1" id="concepto1" data-definicion="4">
-                                <p>Manual de cumplimiento</p>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="filas">
-                    <div class="enunciados" id="enunciado2" data-enunciado="2">
-                        <p>Te permite enviar directamente al área a cargo del Oficial de Cumplimiento, avisos sobre operaciones o conductas que detectes de cualquiera, de otros Colaboradores, Clientes o Agentes, identificadas como Operaciones inusuales u Operaciones Internas Preocupantes.
-                        </p>
-                    </div>
-                    <div id="bloquearEnunciado2" class="bloquear"></div>
-
-                    <div class="cont-conceptos">
-                        <div class="filas">
-                            <div class="conceptos2" id="concepto1" data-definicion="3">
-                                <p>Oficial de Cumplimiento
-</p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos2" id="concepto1" data-definicion="5">
-                                <p>Comité de Comunicación y Control
-                                </p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos2" id="concepto1" data-definicion="1">
-                                <p>Metodología de Evaluación de Riesgos</p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos2" id="concepto1" data-definicion="2">
-                                <p>Buzón de Denuncia para operaciones internas preocupantes e inusuales</p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos2" id="concepto1" data-definicion="4">
-                                <p>Manual de cumplimiento</p>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="filas">
-                    <div class="enunciados" id="enunciado3" data-enunciado="3">
-                        <p>¿A quien se le envía el aviso sobre conductas u operaciones internas preocupantes o inusuales detectadas?
-                        </p>
-                    </div>
-                    <div id="bloquearEnunciado3" class="bloquear"></div>
-
-                    <div class="cont-conceptos">
-                        <div class="filas">
-                            <div class="conceptos3" id="concepto1" data-definicion="3">
-                                <p>Oficial de Cumplimiento
-</p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos3" id="concepto1" data-definicion="5">
-                                <p>Comité de Comunicación y Control
-                                </p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos3" id="concepto1" data-definicion="1">
-                                <p>Metodología de Evaluación de Riesgos</p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos3" id="concepto1" data-definicion="2">
-                                <p>Buzón de Denuncia para operaciones internas preocupantes e inusuales</p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos3" id="concepto1" data-definicion="4">
-                                <p>Manual de cumplimiento</p>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="filas">
-                    <div class="enunciados" id="enunciado4" data-enunciado="4">
-                        <p>Es una herramienta de trabajo mediante la cual los Colaboradores de la Compañía podrán
-                            detectar y reportar posibles Operaciones con recursos de procedencia ilícita y/o combate al
-                            financiamiento del terrorismo; así como realizar el reporte de cualquier operación a la
-                            autoridad.</p>
-                    </div>
-                    <div id="bloquearEnunciado4" class="bloquear"></div>
-
-                    <div class="cont-conceptos">
-                        <div class="filas">
-                            <div class="conceptos4" id="concepto1" data-definicion="3">
-                                <p>Oficial de Cumplimiento
-</p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos4" id="concepto1" data-definicion="5">
-                                <p>Comité de Comunicación y Control
-                                </p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos4" id="concepto1" data-definicion="1">
-                                <p>Metodología de Evaluación de Riesgos</p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos4" id="concepto1" data-definicion="2">
-                                <p>Buzón de Denuncia para operaciones internas preocupantes e inusuales</p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos4" id="concepto1" data-definicion="4">
-                                <p>Manual de cumplimiento</p>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="filas">
-                    <div class="enunciados" id="enunciado5" data-enunciado="5">
-                        <p>El Oficial de Cumplimiento la somete al análisis y dictamen del:
-                        </p>
-                    </div>
-                    <div id="bloquearEnunciado5" class="bloquear"></div>
-
-                    <div class="cont-conceptos">
-                        <div class="filas">
-                            <div class="conceptos5" id="concepto1" data-definicion="3">
-                                <p>Oficial de Cumplimiento
-</p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos5" id="concepto1" data-definicion="5">
-                                <p>Comité de Comunicación y Control
-                                </p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos5" id="concepto1" data-definicion="1">
-                                <p>Metodología de Evaluación de Riesgos</p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos5" id="concepto1" data-definicion="2">
-                                <p>Buzón de Denuncia para operaciones internas preocupantes e inusuales</p>
-                            </div>
-                        </div>
-                        <div class="filas">
-                            <div class="conceptos5" id="concepto1" data-definicion="4">
-                                <p>Manual de cumplimiento</p>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
-            <div class="cont-canvas">
-                <canvas class="canvas" id="canvas1"></canvas>
-                <canvas class="canvas" id="canvas2"></canvas>
-                <canvas class="canvas" id="canvas3"></canvas>
-                <canvas class="canvas" id="canvas4"></canvas>
-                <canvas class="canvas" id="canvas5"></canvas>
-            </div>
-
-            <div class="cont-conceptos">
-                <div class="filas">
-                    <div class="conceptos" id="concepto1" data-definicion="3">
-                        <p>Oficial de Cumplimiento
-</p>
-                    </div>
-                    <div id="bloquearConcepto3" class="bloquear"></div>
-                </div>
-                <div class="filas">
-                    <div class="conceptos" id="concepto1" data-definicion="5">
-                        <p>Comité de Comunicación y Control
-                        </p>
-                    </div>
-                    <div id="bloquearConcepto5" class="bloquear"></div>
-                </div>
-                <div class="filas">
-                    <div class="conceptos" id="concepto1" data-definicion="1">
-                        <p>Metodología de Evaluación de Riesgos</p>
-                    </div>
-                    <div id="bloquearConcepto1" class="bloquear"></div>
-                </div>
-                <div class="filas">
-                    <div class="conceptos" id="concepto1" data-definicion="2">
-                        <p>Buzón de Denuncia para operaciones internas preocupantes e inusuales</p>
-                    </div>
-                    <div id="bloquearConcepto2" class="bloquear"></div>
-                </div>
-                <div class="filas">
-                    <div class="conceptos" id="concepto1" data-definicion="4">
-                        <p>Manual de cumplimiento</p>
-                    </div>
-                    <div id="bloquearConcepto4" class="bloquear"></div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-
-    <div id="mensaje21">
-        <div class="cont-imagen">
-            <img src="./build/img/contenido/Pag21/persona2.svg" alt="persona">
-        </div>
-        <div class="cont-mensaje">
-            <p>¡Excelente trabajo! Estás listo para continuar con la tercera y última parte de tu curso PLD/CFT.
-            </p>
-        </div>
     </div>
 </body>
-
 </html>
