--- a/contenido/pag23.html
+++ b/contenido/pag23.html
@@ -5,320 +5,161 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina 23</title>
+    <title>Página 23</title>
 </head>
 
 <body>
-    <div id="instrucciones2-pag20">
-        <figure class="img-clic">
-            <img src="./build/img/contenido/Pag22/icon2click.svg" alt="Mano">
-        </figure>
+    <div class="cuadro-azul22">
         <p>
-            Da clic en el icono de cada Diferencia para conocer en qué se distinguen el Lavado de Dinero del
-            Financiamiento al Terrorismo.
+            Etapas del Lavado de Dinero
         </p>
     </div>
-
-
-    <div id="cont-diferencias">
-        <div id="lavado">
-            <div class="cont-titulo" id="titulo">LAVADO DE DINERO</div>
-            <div class="cont-info">
-                <div class="info" id="l-cuadro1">
-                    Legalizar las ganancias
-                </div>
-            </div>
-            <div class="cont-info">
-                <div class="info" id="l-cuadro2">
-                    Recursos ilegales
-                </div>
-            </div>
-            <div class="cont-info">
-                <div class="info" id="l-cuadro3">
-                    El dinero utilizado por las actividades delincuenciales llega a ser mayor.
-                </div>
-            </div>
-            <div class="cont-info">
-                <div class="info" id="l-cuadro4">
-                    Para que se genere este delito, existen delitos previos.
-                </div>
-            </div>
-        </div>
-        <div id="diferencias">
-            <div class="cont-titulo" id="titulo">DIFERENCIAS</div>
-            <div class="boton">
-                <p>Propósito del Delito</p>
-                <a class="btn-pag20" data-cuadro="1">
-                    <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag22/cuadro-front.svg" alt="Boton">
-                    </figure>
-                </a>
-            </div>
-            <div class="boton abajo">
-                <p>Fuente o procedencia de los fondos</p>
-                <a class="btn-pag20" data-cuadro="2">
-                    <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag22/cuadro-front.svg" alt="Boton">
-                    </figure>
-                </a>
-            </div>
-            <div class="boton abajo">
-                <p>Volumen de fondos</p>
-                <a class="btn-pag20" data-cuadro="3">
-                    <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag22/cuadro-front.svg" alt="Boton">
-                    </figure>
-                </a>
-            </div>
-            <div class="boton abajo">
-                <p>Momento del Delito</p>
-                <a class="btn-pag20" data-cuadro="4">
-                    <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag22/cuadro-front.svg" alt="Boton">
-                    </figure>
-                </a>
-            </div>
-        </div>
-        <div id="financiamiento">
-            <div class="cont-titulo" id="titulo">FINANCIAMIENTO AL TERRORISMO</div>
-            <div class="cont-info">
-                <div class="info" id="f-cuadro1">
-                    Generar temor o terror
-                </div>
-            </div>
-            <div class="cont-info">
-                <div class="info" id="f-cuadro2">
-                    Recursos ilegales o legales
-                </div>
-            </div>
-            <div class="cont-info">
-                <div class="info" id="f-cuadro3">
-                    El volumen de fondos que manejan los terroristas es mucho menor.
-                </div>
-            </div>
-            <div class="cont-info">
-                <div class="info" id="f-cuadro4">
-                    No ha habido delitos previos
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Diferencias vista Telefono -->
-    <div id="cont-diferenciasTel">
-        <div class="titulo" id="lavado">
-            <p>LAVADO DE DINERO</p>
-        </div>
-        <div class="cont-info">
-            <div class="info" id="l2-cuadro1">
-                Legalizar las ganancias
-            </div>
-        </div>
-        <div class="boton">
-            <b>Momento del Delito</b>
-            <a class="btn-pag20-2" data-cuadro="1">
-                <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag22/boton-tel.svg" alt="Boton">
-                </figure>
-            </a>
-        </div>
-        <div class="titulo" id="financiamiento">
-            <b>FINANCIAMIENTO AL TERRORISMO</b>
-        </div>
-        <div class="cont-info">
-            <div class="info" id="f2-cuadro1">
-                Generar temor/terror
-            </div>
-        </div>
-
-        <div class="titulo" id="lavado">
-            <p>LAVADO DE DINERO</p>
-        </div>
-        <div class="cont-info">
-            <div class="info" id="l2-cuadro2">
-                Recursos ilegales
-            </div>
-        </div>
-        <div class="boton">
-            <b>Momento del Delito</b>
-            <a class="btn-pag20-2" data-cuadro="2">
-                <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag22/boton-tel.svg" alt="Boton">
-                </figure>
-            </a>
-        </div>
-        <div class="titulo" id="financiamiento">
-            <b>FINANCIAMIENTO AL TERRORISMO</b>
-        </div>
-        <div class="cont-info">
-            <div class="info" id="f2-cuadro2">
-                Recursos ilegales o legales
-            </div>
-        </div>
-
-        <div class="titulo" id="lavado">
-            <p>LAVADO DE DINERO</p>
-        </div>
-        <div class="cont-info">
-            <div class="info" id="l2-cuadro3">
-                El dinero utilizado por las actividades delincuenciales llega a ser mayor.
-            </div>
-        </div>
-        <div class="boton">
-            <p><b>Momento del Delito</b></p>
-            <a class="btn-pag20-2" data-cuadro="3">
-                <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag22/boton-tel.svg" alt="Boton">
-                </figure>
-            </a>
-        </div>
-        <div class="titulo" id="financiamiento">
-            <b>FINANCIAMIENTO AL TERRORISMO</b>
-        </div>
-        <div class="cont-info">
-            <div class="info" id="f2-cuadro3">
-                El volumen de fondos que manejan los terroristas es mucho menor.
-            </div>
-        </div>
-
-        <div class="titulo" id="lavado">
-            <p>LAVADO DE DINERO</p>
-        </div>
-        <div class="cont-info">
-            <div class="info" id="l2-cuadro4">
-                Para que se genere este delito, existen delitos previos.
-            </div>
-        </div>
-        <div class="boton">
-            <p><b>Momento del Delito</b></p>
-            <a class="btn-pag20-2" data-cuadro="4">
-                <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag22/boton-tel.svg" alt="Boton">
-                </figure>
-            </a>
-        </div>
-        <div class="titulo" id="financiamiento">
-            <b>FINANCIAMIENTO AL TERRORISMO</b>
-        </div>
-        <div class="cont-info">
-            <div class="info" id="f2-cuadro4">
-                No ha habido delitos previos
-            </div>
-        </div>
-    </div>
-
-    <div id="instrucciones3-pag20">
-        <figure class="img-clic">
-            <img src="./build/img/contenido/Pag22/icon2click.svg" alt="Mano">
+    <div class="instrucciones-mano mano22">
+        <figure class="cont-imagen">
+            <img src="./build/img/contenido/Pag23/Mano.svg" alt="mano">
         </figure>
-        <p>
-            Da clic en cada icono para conocer las semejanzas entre el Lavado de Dinero y el Financiamiento al
-            Terrorismo.
-        </p>
+        <p>Pulsa en cada etapa para conocer más.</p>
     </div>
-
-    <div id="cont-semejanzas">
-        <div id="maletines">
-            <a class="btn2-pag20" href="#maletin1">
-                <figure class="img-maletin">
-                    <img src="./build/img/contenido/Pag22/maletin-amarillo.svg" alt="Maletin">
-                </figure>
-            </a>
-            <a class="btn2-pag20" href="#maletin2">
-                <figure class="img-maletin">
-                    <img src="./build/img/contenido/Pag22/maletin-verde.svg" alt="Maletin">
-                </figure>
-            </a>
-            <a class="btn2-pag20" href="#maletin3">
-                <figure class="img-maletin">
-                    <img src="./build/img/contenido/Pag22/maletin-azul.svg" alt="Maletin">
-                </figure>
-            </a>
-            <a class="btn2-pag20" href="#maletin4">
-                <figure class="img-maletin">
-                    <img src="./build/img/contenido/Pag22/maletin-rojo.svg" alt="Maletin">
-                </figure>
-            </a>
+    <div id="botonesPag22">
+        <div class="info" id="btn-01">
+            <div class="botones" id="btn-colocacion">
+                <a class="btn-pag22" href="#info-colocacion">Colocación</a>
+            </div>
+            <div class="cuadros22" id="info-colocacion">
+                <span>El sujeto activo del Lavado de Dinero introduce al sistema económico formal, en efectivo,
+                    transferencias o cheques, recursos propios o ajenos de actividades ilícitas.
+                </span>
+            </div>
         </div>
-        <div id="semejanzas">
-            <div id="cont-titulos">
-                <div class="titulo" id="lavado">
-                    <p>LAVADO DE DINERO</p>
-                </div>
-                <div class="titulo" id="semejanza">
-                    <p>SEMEJANZAS</p>
-                </div>
-                <div class="titulo" id="financiamiento">
-                    <p>FINANCIAMIENTO AL TERRORISMO</p>
-                </div>
+        <div class="info" id="btn-02">
+            <div class="botones" id="btn-estratificacion">
+                <a class="btn-pag22" href="#info-estratificacion">Estratificación o Enmascaramiento </a>
             </div>
-            <div class="cont-info">
-                <div class="info" id="maletin1">
-                    <p>Son delitos financieros que tienen consecuencias económicas.</p>
-                </div>
+            <div class="cuadros22" id="info-estratificacion">
+                <span>Implica el manejo legal reiterado de los recursos de procedencia ilícita para crear antecedentes
+                    legítimos y complicar que se encuentre el antecedente ilegal de
+                    los recursos.
+                </span>
             </div>
-            <div class="cont-info">
-                <div class="info" id="maletin2">
-                    <p>Pueden amenazar su estabilidad del sector financiero de un país.</p>
-                </div>
+        </div>
+        <div class="info" id="btn-03">
+            <div class="botones" id="btn-integracion">
+                <a class="btn-pag22" href="#info-integracion">Integración o Reingreso </a>
             </div>
-            <div class="cont-info">
-                <div class="info" id="maletin3">
-                    <p>La prevención es esencial para salvaguardar la integridad de los mercados y del marco financiero
-                        mundial.</p>
-                </div>
-            </div>
-            <div class="cont-info">
-                <div class="info" id="maletin4">
-                    <p>Propician el anonimato y la falta de transparencia en sus transacciones.</p>
-                </div>
+            <div class="cuadros22" id="info-integracion">
+                <span>Implica la utilización de los recursos en beneficio del sujeto activo, sin el afán de ocultar el
+                    origen de los mismos porque los recursos ya cuentan con antecedente legal en la
+                    estratificación.</span>
             </div>
         </div>
     </div>
+    <div id="actividad-relacion22">
+        <div class="instrucciones-mano">
+            <figure class="cont-imagen">
+                <img src="./build/img/contenido/Pag23/Mano.svg" alt="mano">
+            </figure>
+            <p id="parrafo1">Relaciona cada concepto con la etapa del ciclo del Lavado de Dinero que le corresponde</p>
+            <p id="parrafo2">Selecciona el ciclo del Lavado de Dinero que corresponde a cada concepto.
+            </p>
+        </div>
+        
+        <div id="actividad">
+            <div class="cont-conceptos">
+                <div class="fila">
+                    <div class="conceptos conceptos-lavado" data-relacion="1">
+                        <p>Introducir ganancias ilícitas al sistema financiero.
+                        </p>
+                    </div>
+                    <div class="bloquear" id="bloquearC1"></div>
+                    <div class="respuestas">
+                        <div class="respuesta respuestaI">
+                            <p>Estratificación o enmascaramiento</p>
+                        </div>
+                        <div class="respuesta respuestaI">
+                            <p>Colocación</p>
+                        </div>
+                        <div class="respuesta respuestaC">
+                            <p>Integración o reingreso</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="fila">
+                    <div class="conceptos conceptos-lavado" data-relacion="2">
+                        <p>Realizar múltiples transacciones que separan los fondos de su fuente ilegal, dificultando su rastreo.</p>
+                    </div>
+                    <div class="bloquear" id="bloquearC2"></div>
+                    <div class="respuestas">
+                        <div class="respuesta respuestaC">
+                            <p>Estratificación o enmascaramiento</p>
+                        </div>
+                        <div class="respuesta respuestaI">
+                            <p>Colocación</p>
+                        </div>
+                        <div class="respuesta respuestaI">
+                            <p>Integración o reingreso</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="fila">
+                    <div class="conceptos conceptos-lavado" data-relacion="3">
+                        <p>Los clientes usan el dinero para comprar artículos o pagar deudas, sueldos, etc.</p>
+                    </div>
+                    <div class="bloquear" id="bloquearC3"></div>
+                    <div class="respuestas">
+                        <div class="respuesta respuestaI">
+                            <p>Estratificación o enmascaramiento</p>
+                        </div>
+                        <div class="respuesta respuestaC">
+                            <p>Colocación</p>
+                        </div>
+                        <div class="respuesta respuestaI">
+                            <p>Integración o reingreso</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+            <div class="cont-canvas">
+                <canvas class="canvasR" id="canvas1_1"></canvas>
+                <canvas class="canvasR" id="canvas2_1"></canvas>
+                <canvas class="canvasR" id="canvas3_1"></canvas>
+            </div>
 
-    <!-- Semejanzas vista Telefono -->
-    <div id="cont-semejanzasTel">
-        <div class="titulo" id="lavado">
-            <p>LAVADO DE DINERO</p>
-        </div>
-        <div class="titulo" id="semejanzas">
-            <p>SEMEJANZAS</p>
-        </div>
-        <div class="titulo" id="financiamiento">
-            <p>FINANCIAMIENTO AL TERRORISMO</p>
-        </div>
-        <a class="btn2-pag20Tel" href="#maletin1-Tel">
-            <figure class="img-maletin">
-                <img src="./build/img/contenido/Pag22/maletin-amarilloTel.svg" alt="Maletin Tel">
-            </figure>
-        </a>
-        <div class="info" id="maletin1-Tel">
-            Son delitos financieros que tienen consecuencias económicas.
-        </div>
-        <a class="btn2-pag20Tel" href="#maletin2-Tel">
-            <figure class="img-maletin">
-                <img src="./build/img/contenido/Pag22/maletin-verdeTel.svg" alt="Maletin Tel">
-            </figure>
-        </a>
-        <div class="info" id="maletin2-Tel">
-            Pueden amenazar su estabilidad del sector financiero de un país.
-        </div>
-        <a class="btn2-pag20Tel" href="#maletin3-Tel">
-            <figure class="img-maletin">
-                <img src="./build/img/contenido/Pag22/maletin-azulTel.svg" alt="Maletin Tel">
-            </figure>
-        </a>
-        <div class="info" id="maletin3-Tel">
-            La prevención es esencial para salvaguardar la integridad de los mercados y del marco financiero mundial.
-        </div>
-        <a class="btn2-pag20Tel" href="#maletin4-Tel">
-            <figure class="img-maletin">
-                <img src="./build/img/contenido/Pag22/maletin-rojoTel.svg" alt="Maletin Tel">
-            </figure>
-        </a>
-        <div class="info" id="maletin4-Tel">
-            Propician el anonimato y la falta de transparencia en sus transacciones.
+            <div class="cont-relacionar">
+                <div class="definicion">
+                    <div class="definicion-lavado"  data-relacion="2">
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag23/i-verde_persona.svg" alt="persona">
+                        </figure>
+                        <div class="info" id="info1">
+                            <p>Estratificación o enmascaramiento</p>
+                        </div>
+                    </div>
+                    <div class="bloquear" id="bloquearD2"></div>
+                </div>
+                <div class="definicion">
+                    <div class="definicion-lavado"  data-relacion="3">
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag23/i-amarillo_billete.svg" alt="billete">
+                        </figure>
+                        <div class="info" id="info2">
+                            <p>Colocación</p>
+                        </div>
+                    </div>
+                    <div class="bloquear" id="bloquearD3"></div>
+                </div>
+                <div class="definicion">
+                    <div class="definicion-lavado"  data-relacion="1">
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag23/i-carrito_azul.svg" alt="carrito">
+                        </figure>
+                        <div class="info" id="info3">
+                            <p>Integración o reingreso</p>
+                        </div>
+                    </div>
+                    <div class="bloquear" id="bloquearD1"></div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
