--- a/contenido/pag26.html
+++ b/contenido/pag26.html
@@ -7,113 +7,144 @@
     <title>Página 26</title>
 </head>
 <body>
-    <div class="versus">
-        <div class="seguro">
-            <h1>Seguro</h1>
+    <div id="cont-intro24">
+        <div id="cont-mensaje1">
+            <div class="cont-globo">
+                <div class="globo">
+                    <p>En el Lavado de  Dinero SIEMPRE existe un delito previo o subyacente, es decir, un delito que genera el producto susceptible de ser lavado. Estas son actividades ilícitas previas generadoras de patrimonio, recursos, bienes o derechos que buscan ser legitimados.</p>
+                </div>
+            </div>
+            <figure class="cont-imagen">
+                <img src="./build/img/contenido/Pag25/mujer.svg" alt="mujer">
+            </figure>
         </div>
-        <div class="vs">
-            <h1>VS</h1>
+
+        <div id="cont-info24">
+            <div class="indicaciones">
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag25/Mano.svg" alt="mano">
+                </figure>
+                <div class="parrafos">
+                    <p>A continuación encontrarás algunos delitos previos o subyacentes al delito de Lavado de Dinero.
+                    </p>
+                    <p>Da clic en cada tarjeta para conocer más.</p>
+                </div>
+            </div>
+
+            <div id="cont-flipcard">
+                <div class="flipcard" id="flip1">
+                    <div class="front caras">
+                        <div class="cont-imagen">
+                            <img src="./build/img/contenido/Pag25/preso.svg" alt="preso">
+                        </div>
+                    </div>
+                    <div class="back caras">
+                        <p>Tráfico de armas, defraudación fiscal y narcotráfico.
+                        </p>
+                    </div>
+                </div>
+                <div class="flipcard" id="flip2">
+                    <div class="front caras">
+                        <div class="cont-imagen">
+                            <img src="./build/img/contenido/Pag25/preso.svg" alt="preso">
+                        </div>
+                    </div>
+                    <div class="back caras">
+                        <p>Secuestro, contrabando y corrupción.</p>
+                    </div>
+                </div>
+                <div class="flipcard" id="flip3">
+                    <div class="front caras">
+                        <div class="cont-imagen">
+                            <img src="./build/img/contenido/Pag25/preso.svg" alt="preso">
+                        </div>
+                    </div>
+                    <div class="back caras">
+                        <p>Trata de personas, falsificación y piratería. </p>
+                    </div>
+                </div>
+                <div class="flipcard" id="flip4">
+                    <div class="front caras">
+                        <div class="cont-imagen">
+                            <img src="./build/img/contenido/Pag25/preso.svg" alt="preso">
+                        </div>
+                    </div>
+                    <div class="back caras">
+                        <p>Fraude, extorsión y robo de hidrocarburos.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="titulo">
+                <h4>Lavado de Dinero en el Código Penal Federal</h4>
+            </div>
+
+            <div id="cont-mensaje2">
+                <div id="cont-globo">
+                    <div class="globo">
+                        <p>En nuestro país, el tipo penal del delito de Lavado de Dinero se encuentra previsto en el Art. 400 bis del Código Penal Federal, conocido como delito de operaciones con recursos de procedencia ilícita.</p>
+                    </div>
+                </div>
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag25/hombre.svg" alt="hombre">
+                </figure>
+            </div>
+        </div>        
+    </div> 
+    
+    <div id="cont-lavado-dinero">
+        <div id="cont-lavado">
+            <div class="visual">
+                <div class="cont-titulo">
+                    <h3>Lavado de Dinero</h3>
+                </div>
+                <div class="cont-imagen">
+                    <img src="./build/img/contenido/Pag25/soborno.svg" alt="soborno">
+                </div>
+            </div>
+            <div class="lista-info">
+                <ul>
+                    <li>5 a 15 años de prisión y de 1000 a 5000 días de multa.</li>
+                    <li>Las penas señaladas se aumentarán un tercio o una mitad cuando se tiene el carácter de consejero, administrador, funcionario, empleado, apoderado o prestador de servicios de la empresa; o se realicen dentro de los dos siguientes años de haberse separado del cargo. </li>
+                    <li>Inhabilitación del cargo por el tiempo igual al de la pena en prisión impuesta.</li>
+                    <li>La pena se duplica si el puesto era de servidor público más inhabilitación y se agrava si se involucra a menores de 18 años.</li>
+                </ul>
+            </div>
         </div>
-        <div class="reaseguro">
-            <h1>Reaseguro</h1>
+        <div id="cont-terrorismo">
+            <div class="lista-info">
+                <ul>
+                    <li>15 a 40 años de prisión y de 400 a 1200 días de multa.</li>
+                    <li>Encubrimiento nacional: 1 a 9 años de prisión y 100 a 300 días de multa.</li>
+                    <li>Encubrimiento internacional: 5 a 10 años de prisión y 100 a 300 días de multa.</li>
+                    <li>Amenaza de cometer delito nacional: 5 a 15 años de prisión y 200 a 600 días de multa.</li>
+                    <li>Amenaza de cometer delito internacional: 6 a 12 años de prisión y 200 a 600 días de multa.</li>
+                </ul>
+            </div>
+            <div class="visual">
+                <div class="cont-titulo">
+                    <h3>Financiamiento al Terrorismo</h3>
+                </div>
+                <div class="cont-imagen">
+                    <img src="./build/img/contenido/Pag25/terrorista.svg" alt="terrorista">
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="tablaComparacion">
-        <div class="tituloSeguro">
-            <h2>Seguro</h2>
-        </div>
-        <div class="tituloReaseguro">
-            <h2>Reaseguro</h2>
-        </div>
-        <div class="seguro elementos">
-            <p>1. Pólizas</p>
-        </div>
-        <div class="reaseguro elementos">
-            <p>1. Contratos de reaseguro.</p>
-        </div>
-        <div class="seguro elementos">
-            <p>2. Se Comercializan productos.</p>
-        </div>
-        <div class="reaseguro elementos">
-            <p>2. Se suscriben carteras de Clientes, a través de contratos de reaseguro.</p>
-        </div>
-        <div class="seguro elementos">
-            <p>3. Servicios financieros.</p>
-        </div>
-        <div class="reaseguro elementos">
-            <p>3. Instrumentos de dispersión de riesgos.</p>
-        </div>
-        <div class="seguro elementos">
-            <p>4. CODUSEF.</p>
-        </div>
-        <div class="reaseguro elementos">
-            <p>4. No Aplica.</p>
-        </div>
-        <div class="seguro elementos">
-            <p>5. GAFI | Producto de Alto Riesgo: componente de Ahorro e Inversión, el resto de productos son de Bajo Riesgo.</p>
-        </div>
-        <div class="reaseguro elementos">
-            <p>5. GAFI | Riesgo: bajo.</p>
-        </div>
-        <div class="seguro elementos">
-            <p>6. Clientes:</p>
-            <ul>
-                <li>Personas físicas</li>
-                <li>Personas morales</li>
-                <li>Entidades financieras</li>
-                <li>Entidades gubernamentales</li>
-                <li>Fideicomisos</li>
-            </ul>
-        </div>
-        <div class="reaseguro elementos">
-            <p>6. Únicamente cendentes, es decir, instituciones financieras
-                que sean aseguradoras y reafianzadoras.</p>
-        </div>
-        <div class="seguro elementos">
-            <p>7. Primas emitidas.</p>
-        </div>
-        <div class="reaseguro elementos">
-            <p>7. Primas tomadas en reaseguro.</p>
-        </div>
-        <div class="seguro elementos">
-            <p>8. Régimen de PLD/CFT con pilares de prevención estándar al 
-                resto de entidades financieras:</p>
-            <ol type="a">
-                <li>Identificación del Cliente</li>
-                <li>Conocimiento del Cliente</li>
-                <li>Enfoque basado en riesgo</li>
-                <li>Estructuras internas</li>
-                <li>Capacitación</li>
-                <li>Reportes regulatorios</li>
-                <li>Sistemas automatizados</li>
-                <li>Lista de personas bloqueadas</li>
-                <li>Auditoría interna</li>
-            </ol>
-        </div>
-        <div class="reaseguro elementos">
-            <p>8. Régimen de PLD/CFT con diversas particularidades:</p>
-            <ol type="a">
-                <li>
-                    Identificación de la Cedente
-                    <ol type="i">
-                        <li>Únicamente aplica el Régimen Simplificado de 
-                            Identificación.</li>
-                    </ol>
-                </li>
-                <li>
-                    Conocimiento de la Cedente
-                    <ol type="i">
-                        <li>El origen de los recursos del Cliente ya fueron
-                            identificados por la Cedente.</li>
-                    </ol>
-                </li>
-            </ol>
+    <div id="cont-final24">
+        <div class="cont-imagen">
+            <img src="./build/img/contenido/Pag25/mujer-noticia.svg" alt="noticia">
         </div>
 
-        <figure>
-            <img src="./build/img/contenido/Pag26/mujer26.svg" alt="mano">
-        </figure>
+        <div class="cont-globo">
+            <div class="globo">
+                <p>
+                    El marco legal mexicano se compone de la Ley de Instituciones de Seguros y de Fianzas, el Código Penal Federal, Disposiciones de Carácter General a que se refiere el artículo 492 de la Ley de Instituciones de Seguros y de Fianzas, aplicables a Instituciones y sociedades mutualistas de seguros (LISF), así como el Código Penal Federal y el Código Nacional de Procedimientos Penales.
+                </p>
+            </div>
+        </div>
     </div>
+
 </body>
 </html>
