--- a/contenido/pag13.html
+++ b/contenido/pag13.html
@@ -1,130 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página 13</title>
+    <title>Página 143</title>
 </head>
-
 <body>
-    
-    <!-- <div id="pag12">
-        <div id="cont-01">
-            <figure class="personaje">
-                <img src="./build/img/contenido/Pag13/personaje.svg" alt="Personaje">
-            </figure>
-            <span id="clic1-pag12">
-                <figure class="mano1-pag12">
-                    <img src="./build/img/contenido/Pag13/mano.svg" alt="mano">
-                </figure>
-                <p>Da clic en cada botón para conocer más detalles.</p>
-            </span>
+    <div id="intro-pag13">
+        <figure class="cont-imagen">
+            <img src="./build/img/contenido/Pag14/Persona.svg" alt="Persona">
+        </figure>
+        <div id="cont-obligaciones">
+            <p>Otra de las obligaciones establecidas en las DCG, es contar con Estructuras Internas para cumplir y hacer cumplir las obligaciones en materia de PLD y CFT, específicamente se refiere a las dos siguientes:</p>
+            <p><span>1. Comité de Comunicación y Control (CCC):</span> Es un órgano que, en conjunto, toma decisiones y lleva a cabo acciones en relación a los temas de Prevención del Lavado de Dinero y Combate al Financiamiento al Terrorismo.</p>
+            <p><span>2. Oficial de Cumplimiento:</span> Es el funcionario encargado de vigilar el cumplimiento, implementación y adecuado funcionamiento de la normatividad en materia de PLD/CFT;  es el enlace entre con la autoridad supervisora (CNSF) entre la SCHP, CNSF y CCC.</p>
         </div>
-        <div id="cont-02">
-            <div id="globo">
-                Se llama cuenta concentradora a la cuenta bancaria de depósito de dinero, a favor de la aseguradora para
-                el pago de primas, deducibles o compra de salvamentos.
+    </div>
+
+    <div id="cont-comite">
+        <!-- <div class="instrucciones-mano">
+            <div class="cont-imagen">
+                <img src="./build/img/contenido/Pag14/Mano.svg" alt="mano">
             </div>
-            <div id="cont-botones">
-                <div id="btn-01">
-                    <div id="btn-aplicar">
-                        <a class="btn_cuadros12" href="#info-seguros">Aplicar</a>
-                    </div>
-                    <div class="cuadros12" id="info-seguros">
-                        <span>Respecto de sus clientes que efectúen transacciones en las cuentas concentradoras, las
-                            políticas y medidas de identificación y conocimiento previstas en el Manual de Cumplimiento
-                            PLD/CFT.</span>
-                    </div>
-                </div>
-                <div id="btn-02">
-                    <div id="btn-seguimiento">
-                        <a class="btn_cuadros12" href="#info-seguimiento">Dar seguimiento</a>
-                    </div>
-                    <div class="cuadros12" id="info-seguimiento">
-                        <span>A todas las transacciones realizadas en dichas cuentas concentradoras, y para tal efecto,
-                            verificar que la Institución Bancaria que lleve la cuenta concentradora
-                            le reporte.
-                        </span>
-                    </div>
-                </div>
-                <div id="btn-03">
-                    <div id="btn-reportar">
-                        <a class="btn_cuadros12" href="#info-reportar">Reportar</a>
-                    </div>
-                    <div class="cuadros12" id="info-reportar">
-                        <span>A la SHCP, en los términos
-                            de las Disposiciones y conforme a la información que
-                            le proporcionen las Instituciones Bancarias que manejan las cuentas concentradoras.</span>
-                    </div>
-                </div>
-            </div>
+            <p>Da clic en las flechas para conocer las funciones del comité.</p>
+        </div> -->
+        <figure class="cont-imagen">
+            <img src="./build/img/contenido/Pag14/Personas.svg" alt="Personas">
+        </figure>
+        <div id="definicion">
+            <p>Comité de Comunicación y Control.</p>
+            <p> Es un órgano colegiado de funcionarios de distintas áreas.</p>
+            <p>Da clic en las flechas de izquierda y derecha para conocer sus funciones</p>
         </div>
-    </div> -->
-    <div id="pag12-2">
-        <div id="cont-01">
-            <figure class="personaje-2">
-                <img src="./build/img/contenido/Pag13/personaje2.svg" alt="Personaje">
-            </figure>
-            <div id="globo-2">
-                Se llama cuenta concentradora a la cuenta bancaria de depósito de dinero, a favor de la aseguradora para
-                el pago de primas, deducibles
-                o compra de salvamentos.
-            </div>
-            <div id="clic2-pag12">
-                <figure class="mano2-pag12">
-                    <img src="./build/img/contenido/Pag13/mano.svg" alt="mano">
-                </figure>
-                <p>Da clic en cada botón para conocer más detalles.</p>
-            </div>
+    </div>
+
+    <div id="carouselComite" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <p class="d-block w-100">Conocer el resultado de la auditoría interna.</p>
+          </div>
+          <div class="carousel-item">
+            <p class="d-block w-100">Conocer a los Clientes o contratos clasificados como de alto riesgo.
+            </p>
+          </div>
+          <div class="carousel-item">
+            <p class="d-block w-100">Establecer criterios para clasificar clientes según su grado de riesgo.</p>
+          </div>
+          <div class="carousel-item">
+            <p class="d-block w-100">Someter a la aprobación del comité de auditoría de la Compañía, el Manual de Cumplimiento PLD/CFT, así como cualquier modificación al mismo.</p>
+          </div>
+          <div class="carousel-item">
+            <p class="d-block w-100">Aprobar la Metodología de Evaluación de Riesgos, debiendo informar de ello al consejo de administración de la Compañía.</p>
+          </div>
+          <div class="carousel-item">
+            <p class="d-block w-100">Informar respecto de conductas que infrinjan las disposiciones para que se apliquen medidas disciplinarias.</p>
+          </div>
+          <div class="carousel-item">
+            <p class="d-block w-100">Presentar al consejo de administración de la Institución, los resultados de la implementación de la Metodología de Evaluación de Riesgos.</p>
+          </div>
+          <div class="carousel-item">
+            <p class="d-block w-100">Asegurarse de que el sistema automatizado contenga listas oficiales.</p>
+          </div>
+          <div class="carousel-item">
+            <p class="d-block w-100">Aprobar los programas de capacitación.</p>
+          </div>
+          <div class="carousel-item">
+            <p class="d-block w-100">Dictaminar las operaciones que deban reportarse. 
+            </p>
+          </div>
         </div>
-        <div id="cont-02-flipCards">
-            <div class="cards" id="flip1">
-                <div class="front caras">
-                    <div class="cont-titulo" id="aseguradora">
-                        <h3>Aseguradora</h3>
-                    </div>
-                    <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag13/flip-card01.svg" alt="Flip Card">
-                    </figure>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselComite" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselComite" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+    <div id="oficialCumplimiento">
+        <h3>Oficial de Cumplimiento</h3>
+        <div id="contenedor-info">
+            <div id="cont-funciones">
+                <div class="cont-imagen" id="t1">
+                    <img src="./build/img/contenido/Pag14/Persona_tablet.svg" alt="persona">
                 </div>
-                <div class="back caras">
-                    <div class="cont-titulo" id="aseguradora">
-                        <h3>Aseguradora</h3>
-                    </div>
-                    <div class="cont-mensaje-back" id="aseguradora">
-                        <li>Aplicar políticas de identificación y conocimiento.</li>
-                        <li>Dar seguimiento a las operaciones que se realicen en ella.</li>
-                        <li>Reportar las operaciones relevantes, inusuales o internas preocupantes. </li>
-                    </div>
+                <div class="cont-imagen" id="t2">
+                    <img src="./build/img/contenido/Pag14/Persona-tablet2.svg" alt="persona">
+                </div>
+                <div id="fn-intro">
+                    <p class="parrafos" id="principal">Es el funcionario designado por el Consejo de Administración de la Compañía, él:</p>
+                </div>
+                <div id="lista-funciones">
+                    <p class="parrafos" id="principal">Es el funcionario designado por el Consejo de Administración de la Compañía, él:</p>
+                    <p class="parrafos" id="fn-1">Elabora y propone al Comité el Manual de Cumplimiento PLD/CFT y Metodología de Evaluación de Riesgos.</p>
+                    <p class="parrafos" id="fn-2">Verifica la correcta ejecución de medidas adoptadas.</p>
+                    <p class="parrafos" id="fn-3">Da a conocer la celebración de contratos  de alto riesgo.</p>
+                    <p class="parrafos" id="fn-4">Investiga para someter a dictaminación del CCC operaciones inusuales o internas preocupantes y envía el reporte a CNSF.</p>
+                    <p class="parrafos" id="fn-5">Define programas de capacitación.</p>
+                    <p class="parrafos" id="fn-6">Recibe y verifica la respuesta de requerimientos de información y documentación.</p>
+                    <p class="parrafos" id="fn-7">Es el enlace entre el Comité, la SHCP y la CNSF.</p>
+                    <p class="parrafos" id="fn-8">Informa respecto de conductas, actividades o comportamientos realizados por colaboradores que incurran en infracciones y que se impongan medidas disciplinarias correspondientes.</p>
                 </div>
             </div>
-            <div class="cards" id="flip2">
-                <div class="front caras">
-                    <div class="cont-titulo" id="transacciones">
-                        <h3>Transacciones</h3>
-                    </div>
-                    <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag13/flip-card02.svg" alt="lupa">
-                    </figure>
+            <div id="cont-capacitacion">
+                <div class="titulo">
+                    <h3>Capacitación y  Difusión</h3>
                 </div>
-                <div class="back caras">
-                    <div class="cont-titulo" id="transacciones">
-                        <h3>Transacciones</h3>
+                <p>Todos los miembros de Grupo Peña Verde están obligados a:</p>
+
+                <div class="imagen">
+                    <div class="cont-imagen">
+                        <img src="./build/img/contenido/Pag14/consejo.svg" alt="consejo">
                     </div>
-                    <div class="cont-mensaje-back" id="transacciones">
-                        <li>Cuidar el registro adecuado del día, hora, plaza, sujetos involucrados, cuentas, contratos,
-                            montos, moneda en el que
-                            se realice la operación.</li>
-                        <li>Identificar y diferenciar los instrumentos de pago: cheque, transferencia
-                            y efectivo.</li>
+                </div>
+
+                <div id="cont-figuras">
+                    <div id="flecha">
+                        <p>Ser capacitados al menos una vez al año en el tema de Prevención del Lavado de Dinero y Combate al Financiamiento al Terrorismo.</p>
                     </div>
+                    <div id="cuadro">
+                        <p>Realizar y aprobar la evaluación correspondiente, al menos con 80 puntos.</p>
+                    </div>    
                 </div>
             </div>
         </div>
     </div>
-
 </body>
-
 </html>
