--- a/contenido/pag19.html
+++ b/contenido/pag19.html
@@ -7,30 +7,203 @@
     <title>Página 19</title>
 </head>
 <body>
+    <div id="cont-intro19">
+        <div class="titulo">
+            <h3>Relación entre la regulación y nuestro Manual de Cumplimiento PLD/CFT</h3>
+        </div>
+        <div class="titulo2">
+            <h3>En la politica de identificación</h3>
+        </div>
 
-    <div id="intro-cuestionario">
-        <div class="caja">
-            <div class="cont-imagen">
-                <img src="./build/img/contenido/Pag19/persona1.svg" alt="persona">
+        <div class="tarjetas">
+            <div class="tarjeta" id="tarjeta1">
+                <ul>
+                    <li>Se incorpora la  identificación de compradores  de salvamentos y entidades fiduciarias.</li>
+                </ul>
             </div>
-            <div class="parrafo">
-                <p>¡Has terminado la primera parte de tu curso PLD!  Veamos cuánto aprendiste. Lee con cuidado cada enunciado que se te presentará y elige si es VERDADERO o FALSO. Si estás listo da clic en el botón INICIAR.</p>
+            <div class="tarjeta" id="tarjeta2">
+                <ul>
+                    <li>Verificación de los datos y documentos que nuestros posibles clientes nos proporcionen para acreditar su identidad, podrá realizarse de forma no presencial; igualmente para contrataciones, la entrevista podrá realizarse de forma no presencial. En ambos casos conforme a las disposiciones que al efecto emita la Comisión.
+                    </li>
+                    <li>Contar con medidas para mitigar el alto Riesgo.</li>
+                </ul>
+            </div>
+            <div class="tarjeta" id="tarjeta3">
+                <ul>
+                    <li>Las Compañías podrán suspender el proceso de  identificación cuando se estime de forma razonable 
+                    que nuestros posibles clientes se encuentran relacionados con operaciones de lavado de dinero o alguno de los riesgos previstos en el Manual de Cumplimiento PLD/CFT.
+                    </li>
+                </ul>
             </div>
         </div>
-        <div class="cont-boton">
-            <a id="inicioCuestionario" href="#actividad-cuestionario">Iniciar</a>
+
+        <div id="titulo2">
+            <h3>Se adiciona un capítulo de Enfoque Basado en Riesgo.</h3>
+        </div>
+
+        <div id="columnas">
+            <div id="columna1">
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag20/persona-pizarra.svg" alt="">
+                </figure>
+                <div class="cuadro">
+                    <div class="titulo">
+                        <h3>Para implementar</h3>
+                    </div>
+                    <div class="info">
+                        <p>Una metodología de Evaluación de Grado de Riesgos que permita identificar el riesgo de Lavado de Dinero y financiamiento al Terrorismo al que se encuentra expuesta la Compañía.</p>
+                    </div>
+                </div>
+            </div>
+            <div id="columna2">
+                <div id="caja1">
+                    <div class="titulo">
+                        <h3>En la Política de Conocimiento:</h3>
+                    </div>
+                    <div class="contenedor1_1">
+                        <div class="cont-globo">
+                            <div class="globo">
+                                <p>
+                                    En operaciones celebradas de forma no presencial, deberá obtenerse la información relativa a la geolocalización.
+    
+                                </p>
+                            </div>
+                        </div>
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag20/persona-esc.svg" alt="">
+                        </figure>
+                    </div>
+                </div>
+                <div id="caja2">
+                    <div class="globo">
+                        <p>Se adiciona un riesgo medio entre alto y bajo a la clasificación del grado de riesgo de  los clientes.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="cards">
+            <div class="operaciones">
+                <div class="titulo">
+                    <h3>En Operaciones Relevantes, Inusuales e Internas Preocupantes: </h3>
+                </div>
+
+                <div class="columnas">
+                    <div class="tarjetas1_1" id="card1">
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag20/circulo1.svg" alt="">
+                        </figure>
+                        <div class="info" id="info1">
+                            <p>
+                                Ahora las operaciones <span>relevantes</span> se reportarán por un monto igual o superior a <span>$7,500</span> dólares de los Estados Unidos.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="tarjetas1_1" id="card2">
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag20/circulo2.svg" alt="">
+                        </figure>
+                        <div class="info" id="info2">
+                            <p>
+                                <span>Las operaciones inusuales e internas preocupantes</span> deberán ser enviadas a la autoridad dentro de los tres días siguientes a que el Comité de Comunicación y Control las haya dictaminado conese carácter.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="estructuras">
+                <div class="titulo">
+                    <h3>En Estructuras Internas:</h3>
+                </div>
+
+                <div class="tarjetas1_1" id="card3">
+                    <figure class="cont-imagen">
+                        <img src="./build/img/contenido/Pag20/circulo3.svg" alt="">
+                    </figure>
+                    <div class="info" id="info3">
+                        <p>
+                            Podrá nombrarse a un <span>Oficial de Cumplimiento</span> interino, en caso de ausencia temporal del mismo.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="capacitacion">
+                <div class="titulo">
+                    <h3>En Capacitación y Difusión:</h3>
+                </div>
+                <div class="tarjetas1_1" id="card4">
+                    <figure class="cont-imagen">
+                        <img src="./build/img/contenido/Pag20/circulo4.svg" alt="">
+                    </figure>
+                    <div class="info" id="info4">
+                        <p>
+                            La Capacitación deberá ser tomada <span>también por los miembros de los Consejos de Administración.</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 
-    <div id="actividad-cuestionario">
+    <div class="mensaje20">
+        <p>Se adicionan capítulos de Modelos Novedosos, de Intercambio de Información entre entidades, así como de Listas de Personas Bloqueadas.</p>
     </div>
-   
-    <div id="retroActividad1">
-        <figure class="cont-imagen">
-            <img src="./build/img/contenido/Pag19/persona2.svg" alt="persona">
-        </figure>
-        <div class="cont-mensaje">
-            <p>¡Muy bien! Espero que esta actividad te haya refrescado la memoria, ahora continuemos con la segunda parte de tu curso PLD/CFT.</p>
+
+    <h2 id="subtitulo20">Obligación en caso de que la Compañía sea titular de una cuenta     Concentradora</h2>
+
+    <div id="pag12">
+        <div id="cont-01">
+            <figure class="personaje">
+                <img src="./build/img/contenido/Pag13/personaje.svg" alt="Personaje">
+            </figure>
+            <span id="clic1-pag12">
+                <figure class="mano1-pag12">
+                    <img src="./build/img/contenido/Pag13/mano.svg" alt="mano">
+                </figure>
+                <p>Da clic en cada botón para conocer más detalles.</p>
+            </span>
+        </div>
+        <div id="cont-02">
+            <div id="globo">
+                Se llama cuenta concentradora a la cuenta bancaria de depósito de dinero, a favor de la aseguradora para
+                el pago de primas, deducibles o compra de salvamentos.
+            </div>
+            <div id="cont-botones">
+                <div id="btn-01">
+                    <div id="btn-aplicar">
+                        <a class="btn_cuadros12" href="#info-seguros">Aplicar</a>
+                    </div>
+                    <div class="cuadros12" id="info-seguros">
+                        <span>Respecto de sus clientes que efectúen transacciones en las cuentas concentradoras, las
+                            políticas y medidas de identificación y conocimiento previstas en el Manual de Cumplimiento
+                            PLD/CFT.</span>
+                    </div>
+                </div>
+                <div id="btn-02">
+                    <div id="btn-seguimiento">
+                        <a class="btn_cuadros12" href="#info-seguimiento">Dar seguimiento</a>
+                    </div>
+                    <div class="cuadros12" id="info-seguimiento">
+                        <span>A todas las transacciones realizadas en dichas cuentas concentradoras, y para tal efecto,
+                            verificar que la Institución Bancaria que lleve la cuenta concentradora
+                            le reporte.
+                        </span>
+                    </div>
+                </div>
+                <div id="btn-03">
+                    <div id="btn-reportar">
+                        <a class="btn_cuadros12" href="#info-reportar">Reportar</a>
+                    </div>
+                    <div class="cuadros12" id="info-reportar">
+                        <span>A la SHCP, en los términos
+                            de las Disposiciones y conforme a la información que
+                            le proporcionen las Instituciones Bancarias que manejan las cuentas concentradoras.</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
