--- a/contenido/pag20.html
+++ b/contenido/pag20.html
@@ -1,210 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página 20</title>
 </head>
+
 <body>
-    <div id="cont-intro19">
-        <div class="titulo">
-            <h3>Relación entre la regulación y nuestro Manual de Cumplimiento PLD/CFT</h3>
-        </div>
-        <div class="titulo2">
-            <h3>En la politica de identificación</h3>
-        </div>
+    <div id="instrucciones-pag20">
+        <figure class="img-clic">
+            <img src="./build/img/contenido/Pag09/icon2click.svg" alt="Mano">
+        </figure>
+        <p>
+            Da clic en cada tarjeta para conocer más sobre cuál es la misión del Manual de Cumplimiento PLD/CFT.
+        </p>
+    </div>
 
-        <div class="tarjetas">
-            <div class="tarjeta" id="tarjeta1">
-                <ul>
-                    <li>Se incorpora la  identificación de compradores  de salvamentos y entidades fiduciarias.</li>
-                </ul>
-            </div>
-            <div class="tarjeta" id="tarjeta2">
-                <ul>
-                    <li>Verificación de los datos y documentos que nuestros posibles clientes nos proporcionen para acreditar su identidad, podrá realizarse de forma no presencial; igualmente para contrataciones, la entrevista podrá realizarse de forma no presencial. En ambos casos conforme a las disposiciones que al efecto emita la Comisión.
-                    </li>
-                    <li>Contar con medidas para mitigar el alto Riesgo.</li>
-                </ul>
-            </div>
-            <div class="tarjeta" id="tarjeta3">
-                <ul>
-                    <li>Las Compañías podrán suspender el proceso de  identificación cuando se estime de forma razonable 
-                    que nuestros posibles clientes se encuentran relacionados con operaciones de lavado de dinero o alguno de los riesgos previstos en el Manual de Cumplimiento PLD/CFT.
-                    </li>
-                </ul>
-            </div>
-        </div>
 
-        <div id="titulo2">
-            <h3>Se adiciona un capítulo de Enfoque Basado en Riesgo.</h3>
-        </div>
-
-        <div id="columnas">
-            <div id="columna1">
+    <div id="flipCards-pag09">
+        <div class="cards" id="flip1">
+            <div class="front caras">
                 <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag20/persona-pizarra.svg" alt="">
+                    <img src="./build/img/contenido/Pag09/libro-azul.svg" alt="Flip Card">
                 </figure>
-                <div class="cuadro">
-                    <div class="titulo">
-                        <h3>Para implementar</h3>
-                    </div>
-                    <div class="info">
-                        <p>Una metodología de Evaluación de Grado de Riesgos que permita identificar el riesgo de Lavado de Dinero y financiamiento al Terrorismo al que se encuentra expuesta la Compañía.</p>
-                    </div>
-                </div>
             </div>
-            <div id="columna2">
-                <div id="caja1">
-                    <div class="titulo">
-                        <h3>En la Política de Conocimiento:</h3>
-                    </div>
-                    <div class="contenedor1_1">
-                        <div class="cont-globo">
-                            <div class="globo">
-                                <p>
-                                    En operaciones celebradas de forma no presencial, deberá obtenerse la información relativa a la geolocalización.
-    
-                                </p>
-                            </div>
-                        </div>
-                        <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag20/persona-esc.svg" alt="">
-                        </figure>
-                    </div>
-                </div>
-                <div id="caja2">
-                    <div class="globo">
-                        <p>Se adiciona un riesgo medio entre alto y bajo a la clasificación del grado de riesgo de  los clientes.</p>
-                    </div>
+            <div class="back caras">
+                <div class="cont-mensaje-back" id="libro-azul">
+                    <p>Cumplir con lo dispuesto por la LISF, las Disposiciones y demás normativas aplicables a la
+                        materia.</p>
                 </div>
             </div>
         </div>
-
-        <div id="cards">
-            <div class="operaciones">
-                <div class="titulo">
-                    <h3>En Operaciones Relevantes, Inusuales e Internas Preocupantes: </h3>
-                </div>
-
-                <div class="columnas">
-                    <div class="tarjetas1_1" id="card1">
-                        <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag20/circulo1.svg" alt="">
-                        </figure>
-                        <div class="info" id="info1">
-                            <p>
-                                Ahora las operaciones <span>relevantes</span> se reportarán por un monto igual o superior a <span>$7,500</span> dólares de los Estados Unidos.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="tarjetas1_1" id="card2">
-                        <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag20/circulo2.svg" alt="">
-                        </figure>
-                        <div class="info" id="info2">
-                            <p>
-                                <span>Las operaciones inusuales e internas preocupantes</span> deberán ser enviadas a la autoridad dentro de los tres días siguientes a que el Comité de Comunicación y Control las haya dictaminado conese carácter.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="estructuras">
-                <div class="titulo">
-                    <h3>En Estructuras Internas:</h3>
-                </div>
-
-                <div class="tarjetas1_1" id="card3">
-                    <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag20/circulo3.svg" alt="">
-                    </figure>
-                    <div class="info" id="info3">
-                        <p>
-                            Podrá nombrarse a un <span>Oficial de Cumplimiento</span> interino, en caso de ausencia temporal del mismo.
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="capacitacion">
-                <div class="titulo">
-                    <h3>En Capacitación y Difusión:</h3>
-                </div>
-                <div class="tarjetas1_1" id="card4">
-                    <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag20/circulo4.svg" alt="">
-                    </figure>
-                    <div class="info" id="info4">
-                        <p>
-                            La Capacitación deberá ser tomada <span>también por los miembros de los Consejos de Administración.</span>
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-    <div class="mensaje20">
-        <p>Se adicionan capítulos de Modelos Novedosos, de Intercambio de Información entre entidades, así como de Listas de Personas Bloqueadas.</p>
-    </div>
-
-    <h2 id="subtitulo20">Obligación en caso de que la Compañía sea titular de una cuenta     Concentradora</h2>
-
-    <div id="pag12">
-        <div id="cont-01">
-            <figure class="personaje">
-                <img src="./build/img/contenido/Pag13/personaje.svg" alt="Personaje">
-            </figure>
-            <span id="clic1-pag12">
-                <figure class="mano1-pag12">
-                    <img src="./build/img/contenido/Pag13/mano.svg" alt="mano">
+        <div class="cards" id="flip2">
+            <div class="front caras">
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag09/libro-naranja.svg" alt="Flip Card">
                 </figure>
-                <p>Da clic en cada botón para conocer más detalles.</p>
-            </span>
-        </div>
-        <div id="cont-02">
-            <div id="globo">
-                Se llama cuenta concentradora a la cuenta bancaria de depósito de dinero, a favor de la aseguradora para
-                el pago de primas, deducibles o compra de salvamentos.
             </div>
-            <div id="cont-botones">
-                <div id="btn-01">
-                    <div id="btn-aplicar">
-                        <a class="btn_cuadros12" href="#info-seguros">Aplicar</a>
-                    </div>
-                    <div class="cuadros12" id="info-seguros">
-                        <span>Respecto de sus clientes que efectúen transacciones en las cuentas concentradoras, las
-                            políticas y medidas de identificación y conocimiento previstas en el Manual de Cumplimiento
-                            PLD/CFT.</span>
-                    </div>
+            <div class="back caras">
+                <div class="cont-mensaje-back" id="libro-naranja">
+                    <p>Establecer las medidas y procedimientos mínimos a observar para prevenir y detectar los actos,
+                        omisiones y operaciones que pudieran favorecer, prestar ayuda, auxilio o cooperación de
+                        cualquier especie para la comisión de los delitos previstos en los artículos 139, 139 Quáter,
+                        148 Bis o 400 Bis del Código Penal Federal.</p>
                 </div>
-                <div id="btn-02">
-                    <div id="btn-seguimiento">
-                        <a class="btn_cuadros12" href="#info-seguimiento">Dar seguimiento</a>
-                    </div>
-                    <div class="cuadros12" id="info-seguimiento">
-                        <span>A todas las transacciones realizadas en dichas cuentas concentradoras, y para tal efecto,
-                            verificar que la Institución Bancaria que lleve la cuenta concentradora
-                            le reporte.
-                        </span>
-                    </div>
+            </div>
+        </div>
+        <div class="cards" id="flip3">
+            <div class="front caras">
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag09/libro-amarillo.svg" alt="Flip Card">
+                </figure>
+            </div>
+            <div class="back caras">
+                <div class="cont-mensaje-back" id="libro-amarillo">
+                    <p>
+                        Prevenir que las Operaciones de la Compañía sean utilizadas para ocultar el origen de los
+                        recursos de procedencia ilícita y/o para financiar actos terroristas, y por lo tanto, se dañe la
+                        reputación de la Compañía.
+                    </p>
                 </div>
-                <div id="btn-03">
-                    <div id="btn-reportar">
-                        <a class="btn_cuadros12" href="#info-reportar">Reportar</a>
-                    </div>
-                    <div class="cuadros12" id="info-reportar">
-                        <span>A la SHCP, en los términos
-                            de las Disposiciones y conforme a la información que
-                            le proporcionen las Instituciones Bancarias que manejan las cuentas concentradoras.</span>
-                    </div>
+            </div>
+        </div>
+        <div class="cards" id="flip4">
+            <div class="front caras">
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag09/libro-verde.svg" alt="Flip Card">
+                </figure>
+            </div>
+            <div class="back caras">
+                <div class="cont-mensaje-back" id="libro-verde">
+                    <p>
+                        Establecer criterios uniformes conforme a los procesos operativos y estrategias, que permitan a
+                        los colaboradores de la Compañía establecer sistemas preventivos de identificación y de
+                        conocimiento del Cliente; a fin de mitigar el riesgo de realizar operaciones que pudieran verse
+                        implicadas en los supuestos antes referidos.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="cards" id="flip5">
+            <div class="front caras">
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag09/libro-azur.svg" alt="Flip Card">
+                </figure>
+            </div>
+            <div class="back caras">
+                <div class="cont-mensaje-back" id="libro-azur">
+                    <p>
+                        Ser una herramienta de trabajo mediante la cual los Colaboradores de la Compañía podrán detectar
+                        y reportar posibles Operaciones con recursos de procedencia ilícita y/o combate al
+                        financiamiento al terrorismo; así como realizar el reporte de cualquier operación a la
+                        autoridad.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
